--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "cat-loggr": "^1.1.0",
+    "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "fastify": "^3.9.2",
+    "mocha": "^8.2.1",
     "slash-create": "^1.1.6"
   },
   "devDependencies": {
